Removed usage deprecated methods